objects/Inspection_Field_Value__c.object
<CustomObject>
    <description>Represents the value of a single item on a vehicle inspection.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Field_Schema_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inspection Field Schema ID</label>
        <referenceTo>Inspection_Field_Schema__c</referenceTo>
        <relationshipLabel>Inspection Field Values</relationshipLabel>
        <relationshipName>Inspection_Field_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspection_ID__c</fullName>
        <label>Inspection ID</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Inspection Field Values</relationshipLabel>
        <relationshipName>Inspection_Field_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inspection Field Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inspection_Field_Schema_ID__c</columns>
        <columns>Inspection_ID__c</columns>
        <columns>Value__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inspection_Field_Schema_ID__c</field>
            <operation>equals</operation>
            <value>if13004</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ifv1{0000000000}</displayFormat>
        <label>Inspection Field Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>